--- a/public/css/main.css
+++ b/public/css/main.css
@@ -441,7 +441,7 @@ footer .nav .nav-item .nav-link{
     text-align: left !important;
 }
 .league-table tbody tr{
-    border-bottom: 1px solid #222;
+    border-bottom: 1px solid var(--outline);
 }
 .league-table tbody tr td{
     padding:8px 0px 8px 0px;
@@ -451,6 +451,14 @@ footer .nav .nav-item .nav-link{
 }
 .league-table thead tr th{
     font-size: 11px;
+}
+.events-table tbody tr{
+    border-bottom: 1px solid var(--outline);
+
+}
+.events-table tbody tr td{
+    padding:10px 8px 10px 8px;
+    font-size: 12px;
 }
 
 /*-----------------------Hihglights Page--------------*/
