--- a/public/css/main.css
+++ b/public/css/main.css
@@ -610,3 +610,19 @@ footer .nav .nav-item .nav-link{
     outline: none !important;
     box-shadow: none !important;
 }
+/*------------------------progress bar-------------*/
+progress{
+    height: 10px;
+}
+.progress-level h6{
+    font-size: 14px;
+}
+.progress-level td{
+    font-size: 13px;
+}
+.home_team{
+    accent-color:var(--senior);
+}
+.away_team{
+    accent-color:var(--orange);
+}
