--- a/public/css/main.css
+++ b/public/css/main.css
@@ -626,3 +626,83 @@ progress{
 .away_team{
     accent-color:var(--orange);
 }
+
+/*---------------calendar--------------*/
+.calendar {
+
+    position: relative;
+    padding: 16px;
+    margin: 0 auto;
+    max-width: 320px;
+    background: rgba(225,225,225,0.05);
+    border-radius: 4px;
+
+}
+
+.month-year {
+    font-size: 18px;
+    margin-bottom: 14px;
+    text-align: center;
+
+}
+
+
+.days {
+    display: flex;
+    flex-wrap: wrap;
+    flex-grow: 1;
+
+}
+
+.day-label {
+    position: relative;
+    flex-basis: calc(14.286% - 2px);
+    margin: 1px 1px 12px 1px;
+    font-weight: 700;
+    font-size: 9px !important;
+    text-transform: uppercase;
+    color: #1E293B;
+}
+
+.day {
+    position: relative;
+    flex-basis: calc(14.286% - 2px);
+    margin: 1px;
+    border-radius: 999px;
+    cursor: pointer;
+    font-weight: 300;
+    font-size: 11px;
+
+}
+
+.day.dull {
+    color: var(--light);
+
+}
+
+.day.today {
+    color: var(--senior) !important;
+    font-weight: 600;
+    background: var(--outline);
+}
+
+.day::before {
+    content: '';
+    display: block;
+    padding-top: 100%;
+}
+
+.day:hover {
+    background: var(--outline);
+}
+
+.day .content {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
