--- a/public/css/main.css
+++ b/public/css/main.css
@@ -192,8 +192,17 @@ a:hover{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: var(--light);
+    background-image:linear-gradient(to bottom, rgba(255,255,255,0.05), rgba(0,0,0,1));
     border-radius: 4px;
+    min-height: 143px;
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    -webkit-transition: .3s ease-in-out;
+    transition: .3s ease-in-out;
+}
+.player-thumbnail:hover{
+    -webkit-transform: scale(1.03);
+    transform: scale(1.03);
 }
 .play-icon{
     opacity: 0.6;
@@ -222,6 +231,7 @@ a:hover{
     transform: scale(1);
     -webkit-transition: .3s ease-in-out;
     transition: .3s ease-in-out;
+    font-size: 0
 
 
 
