--- a/public/css/main.css
+++ b/public/css/main.css
@@ -370,7 +370,7 @@ footer .nav .nav-item .nav-link{
     font-weight: bold;
     padding:15px 0px 15px 0px;
     color: var(--senior);
-    font-size: 13px;
+    font-size: 14px;
 
 
 }
@@ -406,13 +406,14 @@ footer .nav .nav-item .nav-link{
     border-bottom: 1px solid var(--outline);
 }
 .league-table tbody tr td{
-    padding:8px 0px 8px 0px;
-    text-align: center;
-    font-size: 11px;
+    padding:8px;
+    text-align: left;
+    font-size: 12px;
 
 }
 .league-table thead tr th{
-    font-size: 11px;
+    font-size: 13px;
+    padding: 8px;
 }
 .events-table tbody tr{
     border-bottom: 1px solid var(--outline);
@@ -512,7 +513,7 @@ footer .nav .nav-item .nav-link{
 .game-detail{
     background-color: rgba(250,250,250, 0.05);
     border:1px solid var(--outline) ;
-    padding: 8px;
+    padding: 0;
     border-radius: 4px;
 }
 .game-detail small{
